implement settings page

--- a/src/TabKeeper.UI.Wasm/wwwroot/i18n/el.json
+++ b/src/TabKeeper.UI.Wasm/wwwroot/i18n/el.json
@@ -1,15 +1,18 @@
 {
   "general": {
     "home": "Αρχική",
-    "settings": "Ρυθμίσεις",
-    "about": "Σχετικά",
     "not-found": {
       "title": "Δεν βρέθηκε",
       "description": "Συγγνώμη, δεν υπάρχει τίποτα σε αυτήν τη διεύθυνση."
     }
   },
-  "errors": {
-  },
-  "pages": {
+  "settings": {
+    "title": "Ρυθμίσεις",
+    "theme": {
+      "title": "Θέμα",
+      "auto": "Αυτόματο",
+      "dark": "Σκοτεινό",
+      "light": "Φωτεινό"
+    }
   }
 }
