--- a/src/TabKeeper.UI.Wasm/wwwroot/i18n/el.json
+++ b/src/TabKeeper.UI.Wasm/wwwroot/i18n/el.json
@@ -13,6 +13,11 @@
       "auto": "Αυτόματο",
       "dark": "Σκοτεινό",
       "light": "Φωτεινό"
+    },
+    "lang": {
+      "title": "Γλώσσα",
+      "en": "English",
+      "el": "Ελληνικά"
     }
   }
 }
