--- a/src/TabKeeper.UI.Wasm/wwwroot/i18n/en.json
+++ b/src/TabKeeper.UI.Wasm/wwwroot/i18n/en.json
@@ -13,6 +13,11 @@
       "auto": "Auto",
       "dark": "Dark",
       "light": "Light"
+    },
+    "lang": {
+      "title": "Language",
+      "en": "English",
+      "el": "Ελληνικά"
     }
   }
 }
