Full refactor of UI and Settings page

--- a/src/TabKeeper.UI.Wasm/wwwroot/i18n/el.json
+++ b/src/TabKeeper.UI.Wasm/wwwroot/i18n/el.json
@@ -8,6 +8,7 @@
   },
   "settings": {
     "title": "Ρυθμίσεις",
+    "app.title": "Εφαρμογή",
     "theme": {
       "title": "Θέμα",
       "auto": "Αυτόματο",
