--- a/src/TabKeeper.UI.Wasm/wwwroot/i18n/en.json
+++ b/src/TabKeeper.UI.Wasm/wwwroot/i18n/en.json
@@ -8,6 +8,7 @@
   },
   "settings": {
     "title": "Settings",
+    "app.title": "Application",
     "theme": {
       "title": "Theme",
       "auto": "Auto",
