Refactor Modal to use Html dialog and also add missing translations

--- a/src/TabKeeper.UI.Wasm/wwwroot/i18n/el.json
+++ b/src/TabKeeper.UI.Wasm/wwwroot/i18n/el.json
@@ -6,18 +6,24 @@
       "description": "Συγγνώμη, δεν υπάρχει τίποτα σε αυτήν τη διεύθυνση."
     }
   },
+  "add": "Προσθήκη",
+  "update": "Ενημέρωση",
+  "cancel": "Ακύρωση",
+  "close": "Κλείσιμο",
+  "products": "Προϊόντα",
+  "people": "Άνθρωποι",
   "settings": {
     "title": "Ρυθμίσεις",
     "app.title": "Εφαρμογή",
     "theme": {
       "title": "Θέμα",
       "auto": "Αυτόματο",
-      "dark": "Σκοτεινό",
+      "dark": "Σκούρο",
       "light": "Φωτεινό"
     },
     "lang": {
       "title": "Γλώσσα",
-      "en": "English",
+      "en": "Αγγλικά",
       "el": "Ελληνικά"
     }
   }
