--- a/src/TabKeeper.UI.Wasm/wwwroot/i18n/en.json
+++ b/src/TabKeeper.UI.Wasm/wwwroot/i18n/en.json
@@ -6,6 +6,12 @@
       "description": "Sorry, there is nothing at this address."
     }
   },
+  "add": "Add",
+  "update": "Update",
+  "cancel": "Cancel",
+  "close": "Close",
+  "products": "Products",
+  "people": "People",
   "settings": {
     "title": "Settings",
     "app.title": "Application",
