Add missing translations and remove dialog outlet

--- a/src/TabKeeper.UI.Wasm/wwwroot/i18n/el.json
+++ b/src/TabKeeper.UI.Wasm/wwwroot/i18n/el.json
@@ -12,14 +12,24 @@
   "close": "Κλείσιμο",
   "products": "Προϊόντα",
   "people": "Άνθρωποι",
+  "name": "Όνομα",
+  "place": "Τοποθεσία",
+  "price": "Τιμή",
+  "quantity": "Ποσότητα",
   "settings": {
     "title": "Ρυθμίσεις",
     "app.title": "Εφαρμογή",
     "theme": {
       "title": "Θέμα",
       "auto": "Αυτόματο",
-      "dark": "Σκούρο",
-      "light": "Φωτεινό"
+      "fall-light": "Φθινοπωρινό Φωτεινό",
+      "fall-dark": "Φθινοπωρινό Σκούρο",
+      "spring-light": "Ανοιξιάτικο Φωτεινό",
+      "spring-dark": "Ανοιξιάτικο Σκούρο",
+      "summer-light": "Καλοκαιρινό Φωτεινό",
+      "summer-dark": "Καλοκαιρινό Σκούρο",
+      "winter-light": "Χειμερινό Φωτεινό",
+      "winter-dark": "Χειμερινό Σκούρο"
     },
     "lang": {
       "title": "Γλώσσα",
