--- a/src/TabKeeper.UI.Wasm/wwwroot/i18n/el.json
+++ b/src/TabKeeper.UI.Wasm/wwwroot/i18n/el.json
@@ -6,18 +6,34 @@
       "description": "Συγγνώμη, δεν υπάρχει τίποτα σε αυτήν τη διεύθυνση."
     }
   },
+  "add": "Προσθήκη",
+  "update": "Ενημέρωση",
+  "cancel": "Ακύρωση",
+  "close": "Κλείσιμο",
+  "products": "Προϊόντα",
+  "people": "Άνθρωποι",
+  "name": "Όνομα",
+  "place": "Τοποθεσία",
+  "price": "Τιμή",
+  "quantity": "Ποσότητα",
   "settings": {
     "title": "Ρυθμίσεις",
     "app.title": "Εφαρμογή",
     "theme": {
       "title": "Θέμα",
       "auto": "Αυτόματο",
-      "dark": "Σκοτεινό",
-      "light": "Φωτεινό"
+      "fall-light": "Φθινοπωρινό Φωτεινό",
+      "fall-dark": "Φθινοπωρινό Σκούρο",
+      "spring-light": "Ανοιξιάτικο Φωτεινό",
+      "spring-dark": "Ανοιξιάτικο Σκούρο",
+      "summer-light": "Καλοκαιρινό Φωτεινό",
+      "summer-dark": "Καλοκαιρινό Σκούρο",
+      "winter-light": "Χειμερινό Φωτεινό",
+      "winter-dark": "Χειμερινό Σκούρο"
     },
     "lang": {
       "title": "Γλώσσα",
-      "en": "English",
+      "en": "Αγγλικά",
       "el": "Ελληνικά"
     }
   }
