--- a/src/TabKeeper.UI.Wasm/wwwroot/i18n/el.json
+++ b/src/TabKeeper.UI.Wasm/wwwroot/i18n/el.json
@@ -6,6 +6,8 @@
       "description": "Συγγνώμη, δεν υπάρχει τίποτα σε αυτήν τη διεύθυνση."
     }
   },
+  "yes": "Ναί",
+  "no": "Όχι",
   "add": "Προσθήκη",
   "update": "Ενημέρωση",
   "cancel": "Ακύρωση",
@@ -16,6 +18,7 @@
   "place": "Τοποθεσία",
   "price": "Τιμή",
   "quantity": "Ποσότητα",
+  "delete-question": "Συνέχεια και διαγραφή;",
   "settings": {
     "title": "Ρυθμίσεις",
     "app.title": "Εφαρμογή",
